--- a/assets/css/_constants.scss
+++ b/assets/css/_constants.scss
@@ -2,3 +2,10 @@ $color-primary: #F1F1F1;
 $color-accent: #246754;
 
 $padding-horizontal: 5.5vw;
+
+$z-logo: 50;
+$z-mask: 70;
+$z-description: 80;
+$z-cursor: 100;
+$z-link: 150;
+$z-loading: 200;
