--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: bookmania, serif;
+  font-family: bookmania, a-otf-futo-min-a101-pr6n, serif;
   font-weight: 400;
   font-style: normal;
   overflow: auto;
