--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -2,6 +2,9 @@ html {
   overflow: hidden;
   height: 100%;
   font-size: 7vmin;
+  @media screen and (max-width: $breakpoint) {
+    overflow: scroll;
+  }
 }
 
 body {
